# Binary-slammer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  clean.sh  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
installer/: binaryslammer.iss
src/: app_dirs.h  config.h  console_handler.cpp  console_handler.h  logger.h  main.cpp  singleton.h  win32_headers.h
src/analysis/: asm_annotate.h  cfg.cpp  cfg.h  import_categories.h  md5.h  overview.h  rich_header.h  security_analyzer.h
src/binary/: binary.cpp  binary.h  disassembler.cpp  disassembler.h
src/data/: api_descriptions.h  api_settings.h  metadata.h  open_url.h  section_flags.h
src/decompiler/: lifter.cpp  lifter.h
src/ir/: ir_lifter.cpp  ir_lifter.h
src/rendering/: app_icon.h  file_prompt.h  nav_state.h  ui.cpp  ui.h
tools/: gen_icon.py
